--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
-            <form action="/doLogin" method="post" class="form-horizontal">
+            <form action="/doLogin" method="post" enctype="multipart/form-data"  class="form-horizontal">
                 <span class="heading">用户登录</span>
                 <div class="form-group">
                     <input type="text" name="username" class="form-control" id="inputEmail3" placeholder="用户名">
